# EBUTv2

./: Cargo.toml  README.md  build.rs
docs/: ACCOUNTABLE_BATCH_SPEED_FIX.md  ACCOUNTABLE_CHALLENGE_FILE_ENCRYPTION.md  AGENT_TASKS.md  AUDIT_CHALLENGE_POLICY.md  EXTERNAL_ELLIGATOR_CODEC_BUILD.md  FULL_CODEBASE_AUDIT.md  HIDDEN_GAP_REVOCATION_BINDING_FIX.md  HIDDEN_GAP_REVOCATION_FIX.md  HIDDEN_M_FILE_PROOF.md  HIDDEN_M_SPEED_PATCH.md  INTEGRATION_AUDIT.md  NONTRANSFERABLE_EMAX_REVOCATION_INTEGRATION.md  OPTION1_ELLIGATOR_FILE_BINDING.md  OPTION_A_POINT_ENCODING.md  REVERSIBLE_BITPACK_ENCODING.md  REVOCATION_GAP_SECURITY.md  SECURITY_OPTIMIZATION_PATCHES.md
scripts/: install_libristretto_elgamal.sh
src/: batched_eq.rs  bbs_proof.rs  epoch_refresh.rs  file_binding.rs  lib.rs  master_mint.rs  option1_file_binding.rs  revocation.rs  ristretto_elligator_codec.rs  same_x_bridge.rs  serde_utils.rs  server.rs  setup.rs  spend.rs  upload.rs
src/v3_zkp/: batched_eq.rs  gap.rs  generators.rs  mod.rs  prover.rs  utils.rs
